Affichage des informations channel

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 	<input type="url" id="source" placeholder="Url du podcast" value="">
 	<button name="submit"> Charger </button>
 
-	<div id="content">
+	<div id="Channelcontent">
+		<div id="Titre"></div>
+		<div id="Lien"></div>
+		<div id="Description"></div>
+		<img src="" Title="">
+		<div id="item"></div>
 	</div>
 
 
