Boucle pour chaque item à completer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 		<div id="Lien"></div>
 		<div id="Description"></div>
 		<img src="" Title="">
-		<div id="item"></div>
+	</div>
+	<div id="item">
+		<div id="title"></div>
+		<div id="link"></div>
+		<div id="description"></div>
+		<div id="enclosure"></div>
 	</div>
 
 
