Image, video, audio et description OK

--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
 		<div id="Titre"></div>
 		<div id="Lien"></div>
 		<div id="Description"></div>
-		<img src="" Title="" link="">
+		<img src="" alt="">
 	</div>
 	<div id="listeItem">
 		<div id="item">
 			<div id="title"></div>
 			<div id="link"></div>
 			<div id="description"></div>
-			<div id="enclosure"></div>
+			<div id="enclosure">
+				<audio controls style="display:none;" src=""></audio>
+				<video controls style="display:none;" src=""></video>
+				<img src="" style="display:none">
+			</div>
 		</div>
 	</div>
 
