Ajout d'un lecteur bas de page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css" type="text/css" />
   <title> Podcast </title>
 </head>
 <body>
@@ -21,11 +22,17 @@
 			<div id="link"></div>
 			<div id="description"></div>
 			<div id="enclosure">
-				<audio controls style="display:none;" src=""></audio>
-				<video controls style="display:none;" src=""></video>
-				<img src="" style="display:none">
+				<audio controls style="display:none;" width="400" height="200"src=""></audio>
+				<video controls style="display:none;" width="400" height="200" src=""></video>
+				<img src="" width="400" height="200" style="display:none">
 			</div>
+			<button name="b">Afficher le média</button>
 		</div>
+	</div>
+	<div class="fixed">
+		<audio controls style="display:none;" width="400" height="200"src=""></audio>
+		<video controls style="display:none;" width="400" height="200" src=""></video>
+		<img src="" width="400" height="200" style="display:none">
 	</div>
 
 
