--- a/index.html
+++ b/index.html
@@ -7,32 +7,34 @@
 </head>
 <body>
 	
-	<input type="url" id="source" placeholder="Url du podcast" value="">
-	<button name="submit"> Charger </button>
-
-	<div id="Channelcontent">
-		<div id="Titre"></div>
-		<div id="Lien"></div>
-		<div id="Description"></div>
-		<img src="" alt="">
-	</div>
-	<div id="listeItem">
-		<div id="item">
-			<div id="title"></div>
-			<div id="link"></div>
-			<div id="description"></div>
-			<div id="enclosure">
-				<audio controls style="display:none;" width="400" height="200"src=""></audio>
-				<video controls style="display:none;" width="400" height="200" src=""></video>
-				<img src="" width="400" height="200" style="display:none">
-			</div>
-			<button name="b">Afficher le média</button>
+	
+	<div id="flux">
+		<div id="Channelcontent">
+			<div id="Titre"></div>
+			<div id="Lien"></div>
+			<div id="Description"></div>
+			<img src="" alt="">
 		</div>
-	</div>
-	<div class="fixed">
-		<audio controls style="display:none;" width="400" height="200"src=""></audio>
-		<video controls style="display:none;" width="400" height="200" src=""></video>
-		<img src="" width="400" height="200" style="display:none">
+		<div id="listeItem">
+			<div id="item">
+				<div id="title"></div>
+				<div id="link"></div>
+				<div id="description"></div>
+				<div id="enclosure">
+					<audio controls style="display:none;" width="400" height="200"src=""></audio>
+					<video controls style="display:none;" width="400" height="200" src=""></video>
+					<img src="" width="400" height="200" style="display:none">
+				</div>
+				<button name="b" style="display:none;">Enclosure</button>
+			</div>
+		</div>
+		<div class="fixedright"><input type="url" id="source" placeholder="Url du podcast" value="">
+	<button name="submit"> Charger </button></div>
+		<div class="fixed">
+			<audio controls style="display:none; position:fixed; bottom:0; margin:auto;" src=""></audio>
+			<video controls style="display:none;" width="400" height="200" src=""></video>
+			<img class="lecteur" src="" width="400" height="200" style="display:none;">
+		</div>
 	</div>
 
 
