Suppression du média dans item + ameliorations

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="Foundation/foundation.min.css">
 	<link rel="stylesheet" type="text/css" href="Foundation/normalize.css">
-	<title> Podcast </title>
+	<title> Lecteur de podcast </title>
 </head>
 <body>
 
@@ -50,7 +50,7 @@
 				<h3 class="subheader text-left" id="title"></h3>
 				<p id="description"></p>
 				<p class="text-center"><a id="link"></a></p>
-				<a class="button radius" style="display:none;"> Enclosure </a>
+				<a class="button radius" style="display:none;">Voir média</a>
 			</div><!-- class row -->
 		</div><!-- end listeItem -->
 		<div id="enclosure">
@@ -62,14 +62,14 @@
 	</div><!-- class large-12 columns text-center -->
 
 	<div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-		<h2 class="subheader text-center" id="modalTitle"> Besoin d'aide ? </h2>
-		<p class="text-left">Saisir l'URL du flux RSS que vous voulez suivre</p>
+		<h2 class="subheader text-center" id="modalTitle"> <center>Besoin d'aide ? </center></h2>
+		<center><p class="text-left"><center>Saisir l'URL du flux RSS que vous voulez suivre</center></p>
 		<img src="img/img1.png" name="img" class="small-9" />
-		<p class="text-left">Pour lire les médias, il faut cliquer sur le bouton "Enclosure" :</p>
-		<img src="img/img2.png" name="img" class="small-9"/>
-		<p class="text-left">Voici les différents types de médias que vous allez avoir :</p>
+		<p class="text-left"><center>Pour lire les médias, il faut cliquer sur le bouton "Voir média" :</center></p>
+		<img src="img/img2bis.png" name="img" class="small-9"/>
+		<p class="text-left"><center>Voici les différents types de médias que vous allez avoir :</center></p>
 		<img src="img/img3.png" name="img" class="small-4" />
-		<img src="img/img4.png" name="img" class="small-4" />
+		<img src="img/img4.png" name="img" class="small-4" /></center>
 		<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 	</div>
 
