--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="Foundation/foundation.min.css">
 	<link rel="stylesheet" type="text/css" href="Foundation/normalize.css">
-	<title> Lecteur de podcast </title>
+	<title> Lecteur de podcasts </title>
 </head>
 <body>
 
