Favicon (logo à côté du titre de la page)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="Foundation/foundation.min.css">
 	<link rel="stylesheet" type="text/css" href="Foundation/normalize.css">
 	<title> Lecteur de podcasts </title>
+	<link rel="icon" type="image/png" href="img/logo_rss.png" />
 </head>
 <body>
 
